.k8s/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreflow-api-deployment
  labels:   
    app: coreflow-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coreflow-api
  template:
    metadata:
      labels:
        app: coreflow-api
    spec:
      containers:
      - name: coreflow-api
        image: rennanmk9/coreflow-api:1.0.0
        imagePullPolicy: IfNotPresent #
        ports:
        - containerPort: 3000
