.k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: coreflow-api-service
  labels:
    app: coreflow-api
spec:
  selector:
    app: coreflow-api
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
