.k8s/frontend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: coreflow-front-service
  labels:
    app: coreflow-front
spec:
  type: NodePort
  selector:
    app: coreflow-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
      nodePort: 30000
