.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coreflow-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
  - host: coreflow.seudominio.com
    http:
      paths:

      - path: /
        pathType: Prefix
        backend:
          service:
            name: coreflow-front-service
            port:
              number: 80

      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: coreflow-api-service
            port:
              number: 3001

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: coreflow-api-service
            port:
              number: 3001

      - path: /webhooks
        pathType: Prefix
        backend:
          service:
            name: coreflow-api-service
            port:
              number: 3001
